# sweepify

./: .env.example  .gitignore  README.md  pyproject.toml
src/mapa/: __init__.py  classifier.py  cli.py  config.py  db.py  models.py  spotify.py
src/sweepify/: __init__.py  __main__.py  classifier.py  cli.py  config.py  db.py  enricher.py  models.py  spotify.py  ui.py
tests/: test_classifier.py  test_db.py  test_enricher.py  test_playlist.py  test_spotify.py
