[project]
name = "sweepify"
version = "0.1.0"
description = "AI-powered curator for your Spotify music — sweep your songs into playlists"
readme = "README.md"
authors = [
    { name = "luiul", email = "aceitunosoriano@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.86.0",
    "boto3>=1.42.73",
    "click>=8.3.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "spotipy>=2.26.0",
]

[project.scripts]
sweepify = "sweepify.cli:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]
ui = [
    "plotly>=6.6.0",
    "streamlit>=1.45.0",
    "watchdog>=6.0.0",
]
